@@ -13,22 +13,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.12.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>22</source>
+                    <target>22</target>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
 
             </plugin>
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				 <version>2.18.1</version> 
+				 <version>3.5.2</version>
 				 
 				<configuration>
-				<!-- <parallel>methods</parallel>
-				<useUnlimitedThread>true</useUnlimitedThread> -->
+
 					<suiteXmlFiles>
 					<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
@@ -59,24 +59,45 @@
             <artifactId>extentreports</artifactId>
             <version>3.1.2</version>
         </dependency>
-        
-  <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.11</version>
-</dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.14.2</version>
+            <scope>test</scope>
+        </dependency>
 
-<dependency>
-    <groupId>info.cukes</groupId>
-    <artifactId>cucumber-java</artifactId>
-    <version>1.2.2</version>
-</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.20.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.20.1</version>
+        </dependency>
+
 <dependency>
     <groupId>com.github.mkolisnyk</groupId>
     <artifactId>cucumber-runner</artifactId>
     <version>1.3.5</version>
 </dependency>
-<dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.9.2</version>
+        </dependency>
+
+        <dependency>
     <groupId>com.github.mkolisnyk</groupId>
     <artifactId>cucumber-report-generator</artifactId>
     <version>1.3.5</version>
@@ -100,18 +121,20 @@
     <version>1.2.2</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
-<dependency>
-    <groupId>info.cukes</groupId>
-    <artifactId>cucumber-core</artifactId>
-    <version>1.2.2</version>
-</dependency>
-<dependency>
-    <groupId>info.cukes</groupId>
-    <artifactId>gherkin</artifactId>
-    <version>2.12.2</version>
-    <scope>provided</scope>
-</dependency>
-<dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>7.20.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>gherkin</artifactId>
+            <version>30.0.4</version>
+        </dependency>
+
+
+        <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.14.3</version>
@@ -159,12 +182,6 @@
             <version>1.2.17</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.7</version>
-            <scope>system</scope>
-            <systemPath>C:\Program Files\Java\jdk1.8.0_211\lib\tools.jar</systemPath>
-        </dependency>
+
 </dependencies>
   </project>
